--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,6 +98,14 @@
                                     <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
                                     <a href="/oauth2/login/jai">Jai 登录(JAP)</a>
                                 </li>
+                                <li>
+                                    <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
+                                    <a href="/oauth2/login/implicit/jai">Jai 隐式授权登录(JAP)</a>
+                                </li>
+                                <li>
+                                    <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
+                                    <a href="/oauth2/login/password/jai">Jai 密码授权登录(JAP)</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
