--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -96,15 +96,15 @@
                             <ul class="list-unstyled mb-0 pl-2">
                                 <li>
                                     <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
-                                    <a href="/oauth2/login/jai">Jai 登录(JAP)</a>
+                                    <a href="/oauth2/login/jai">授权码模式登录(JAP)</a>
                                 </li>
                                 <li>
                                     <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
-                                    <a href="/oauth2/login/implicit/jai">Jai 隐式授权登录(JAP)</a>
+                                    <a href="/oauth2/login/implicit/jai">隐式授权模式登录(JAP)</a>
                                 </li>
                                 <li>
                                     <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
-                                    <a href="/oauth2/login/password/jai">Jai 密码授权登录(JAP)</a>
+                                    <a href="/oauth2/login/password/jai">密码授权模式登录(JAP)</a>
                                 </li>
                             </ul>
                         </div>
