--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,16 +95,13 @@
                         <div class="card-body p-2">
                             <ul class="list-unstyled mb-0 pl-2">
                                 <li>
-                                    <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
-                                    <a href="/oauth2/login/jai">授权码模式登录(JAP)</a>
+                                    <a href="/oauth2/login/jai">1. 授权码模式登录(JAP)</a>
                                 </li>
                                 <li>
-                                    <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
-                                    <a href="/oauth2/login/implicit/jai">隐式授权模式登录(JAP)</a>
+                                    <a href="/oauth2/login/implicit/jai">2. 隐式授权模式登录(JAP)</a>
                                 </li>
                                 <li>
-                                    <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
-                                    <a href="/oauth2/login/password/jai">密码授权模式登录(JAP)</a>
+                                    <a href="/oauth2/login/password/jai">3. 密码授权模式登录(JAP)</a>
                                 </li>
                             </ul>
                         </div>
@@ -122,7 +119,6 @@
                         <div class="card-body p-2">
                             <ul class="list-unstyled mb-0 pl-2">
                                 <li>
-                                    <img src="https://console.fujieid.com/static/picture/logo.png" alt="" style="width: 20px;position: relative;top: -2px;;" class="mr-1">
                                     <a href="/oidc/login/jai">Jai OIDC 登录(JAP)</a>
                                 </li>
                             </ul>
