--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,12 +22,10 @@
     </div>
     <div>
         <label for="password">记住我：</label>
-        <input type="checkbox" name="remember-me" id="remember-me" value="on">
+        <input type="checkbox" name="rememberMe" id="rememberMe" value="on">
     </div>
     <div>
         <input type="submit" value="登录">
-        <a href="/simple/auth">已登录？</a>
-        <a href="/simple/logout">退出</a>
     </div>
 </form>
 </body>
