--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -109,6 +109,9 @@
                                 <li>
                                     <a href="/oauth2/login/password/jai">3. 密码授权模式登录</a>
                                 </li>
+                                <li>
+                                    <a href="/oauth2/login/gitlab">Gitlab 登录</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
